test/files/neg/sip23-no-null-type.check
sip23-no-null-type.scala:2: error: identifier expected but 'null' found.
  val nada: null.type = null
            ^
one error found
